--- a/src/Components/Home/fader.css
+++ b/src/Components/Home/fader.css
@@ -1,20 +1,21 @@
 .welcome {
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out;
-  }
-  
-  .fade-in {
-    opacity: 1;
-  }
-  
-  .fade-out {
-    opacity: 0;
-  }
-  
-  .welcome-container {
-    height: 50px; 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.welcome {
+  display: flex;
+  align-items: center;
+}
+
+
+
+.fade-in {
+  opacity: 1;
+}
+
+.fade-out {
+  opacity: 0;
+}
+
+
