--- a/src/Components/Projects/projects.css
+++ b/src/Components/Projects/projects.css
@@ -23,19 +23,23 @@
 }
 
 .photo {
-  width: 200px;
-  height: 150px;
-  border-radius: 50%;
+  width: 250px;
+  height: 200px;
   object-fit: cover;
   margin-bottom: 20px;
 }
 
 .text {
+  color: aliceblue;
   text-align: center;
-  margin-bottom: 10px;
+  margin-bottom: 60px;
+  font-size: larger;
+  font-style: oblique;
 }
 
 .code-link {
+  height: 0px;
+  color: #000;
   margin-bottom: 60px;
   background-color: transparent;
   border: none;
