--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -1,60 +1,83 @@
 .footer {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: fixed;
-    bottom: 200px;
-    left: 0px;
-    right: 0px;
-    padding: 10px;
-  }
-  
-  .footer-buttons {
-    margin-top: 10px;
-  }
-  
-  .social-button {
-    margin-top: 2rem;
-    width: 90px;
-    height: 45px;
-    background-color: transparent;
-    border: none;
-     border-radius: 15px;
-     transition: color 0.25s ease-out;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: fixed;
+  bottom: 65px;
+  left: 0;
+  right: 0;
+  padding: 10px;
+}
+
+.footer-buttons {
+  margin-top: 10px;
+}
+
+.social-button {
+  margin-top: 2rem;
+  width: 90px;
+  height: 45px;
+  background-color: transparent;
+  border: none;
+  border-radius: 15px;
+  transition: color 0.25s ease-out;
+}
+
+.social-button:hover {
+  color: rgba(255, 255, 255, 0.717);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  opacity: 0.6;
+  transition-delay: 0.02s;
+}
+
+.icon {
+  font-size: 40px;
+}
+
+.footer-text {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  text-align: center;
+  padding: 10px 0;
+}
+
+.footer-text hr {
+  border: none;
+  height: 0.5px;
+  background-color: black;
+  margin: 10px 0;
+}
+
+.footer-text p {
+  margin: 5px;
+  font-size: 14px;
+  color: black;
+}
+
+@media (max-width: 768px) {
+  .footer {
+    bottom: 100px;
   }
 
-  .social-button:hover {
-    color: rgba(255, 255, 255, 0.717);
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    opacity: 0.6;
-    transition-delay: 0.02s;
-  }
-
-  .icon {
-    font-size: 40px;
-  }
-
-  .footer-text {
-    position: fixed;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    text-align: center;
-    padding: 10px 0;
-  }
-  
-  .footer-text hr {
-    border: none;
-    height: 0.5px;
-    background-color: black;
-    margin: 10px 0;
-  }
-  
   .footer-text p {
-    margin: 5px;
-    font-size: 14px;
-    color: black;
+    font-size: 12px;
   }
-  
-  
+
+  .footer-buttons {
+    margin-top: 5px;
+  }
+}
+
+@media (max-width: 480px) {
+
+  .footer {
+    bottom: 70px;
+  }
+
+  .footer-text p {
+    font-size: 10px;
+  }
+}
