--- a/src/Components/Home/fader.css
+++ b/src/Components/Home/fader.css
@@ -1,14 +1,24 @@
-.welcome {
-  opacity: 0;
-  transition: opacity 0.5s ease-in-out;
+.welcome-container {
+  position: relative;
 }
 
 .welcome {
   display: flex;
-  align-items: center;
+  position: absolute;
+  top: 50px;
+  left: 50px;
+  font-size: 70px;
+  margin: 10px;
 }
 
-
+.welcome2 {
+  display: flex;
+  position: absolute;
+  top: 130px;
+  left: 50px;
+  font-size: 60px;
+  margin: 10px;
+}
 
 .fade-in {
   opacity: 1;
@@ -17,5 +27,6 @@
 .fade-out {
   opacity: 0;
 }
+
 
 
