--- a/src/Components/Nav/nav.css
+++ b/src/Components/Nav/nav.css
@@ -1,95 +1,91 @@
 .nav {
-    display: flex;
-    justify-content: flex-end;
-    top: 0;
-    right: 0;
-    padding: 100px;
-    position: fixed;
-  }
-  
-  .nav ul {
-    list-style-type: none;
-    margin: 150;
-    padding: 0;
-  }
-  
-  .nav li {
-    font-size: 50px;
-    margin-right: 100px;
-  }
-  
+  display: flex;
+  justify-content: flex-end;
+  top: 0;
+  right: 0;
+  padding: 100px;
+  position: fixed;
+}
+
+.nav ul {
+  list-style-type: none;
+  margin: 150;
+  padding: 0;
+}
+
+.nav li {
+  font-size: 50px;
+  margin-right: 100px;
+}
+
 .nav-button {
-    margin-top: 1rem;
-    height: 60px;
-    background-color: black;
-    border: none;
-    border-radius: 0px;
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
-    font-size: 50px;
-    padding: 0px 0px;
-    line-height: 1;
-    transition: color 0.25s ease-out, background-color 0.25s ease-out;
-    text-decoration: none;
-  }
-  
-  .nav-button:hover {
-    color: rgba(255, 255, 255, 0.717);
-    background-color: #3c1053; 
-    transition-delay: 0.02s;
-    opacity: 0.6;
-  }
+  margin-top: 1rem;
+  height: 60px;
+  background-color: black;
+  border: none;
+  border-radius: 0px;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  font-size: 50px;
+  padding: 0px 0px;
+  line-height: 1;
+  transition: color 0.25s ease-out, background-color 0.25s ease-out;
+  text-decoration: none;
+}
 
-  .nav2 {
-    margin-top: 35px;
-    display: flex;
+.nav-button:hover {
+  color: rgba(255, 255, 255, 0.717);
+  background-color: #3c1053;
+  transition-delay: 0.02s;
+  opacity: 0.6;
+}
+
+
+@media (max-width: 1250px) {
+  .nav {
+    padding: 30px;
     justify-content: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 20px;
-    flex-direction: row;
+    position: static; 
+  }
+
+  .nav ul {
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    margin-top: 50px;
   }
 
-  .nav2-home {
-    position: absolute;
-    left: 150px;
-    top: 50%;
-    transform: translateY(-50%);
-    color: black;
-    font-size: 50px;
-  }
-
-  .nav2-home:hover {
-    color: rgba(255, 255, 255, 0.717);
-    transition-delay: 0.02s;
-    opacity: 0.6;
-  }
-  
-  .nav2-button {
-    margin: 0 10px;
-    height: 40px;
-    background-color: black;
-    border: none;
-    border-radius: 0px;
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
+  .nav li {
     font-size: 30px;
-    padding: 0px 10px;
-    line-height: 1;
-    transition: color 0.25s ease-out, background-color 0.25s ease-out;
-    text-decoration: none;
+    margin-right: 0; 
+    margin-bottom: 20px; 
   }
-  
-  .nav2-button:hover {
-    color: rgba(255, 255, 255, 0.717);
-    background-color: #3c1053; 
-    transition-delay: 0.02s;
-    opacity: 0.6;
+}
+
+
+@media (max-width: 768px) {
+  .nav {
+    padding: 50px;
+    justify-content: center;
+    position: relative;
   }
-  
-  
+
+  .nav li {
+    font-size: 30px;
+    margin-right: 50px;
+  }
+}
+
+@media (max-width: 480px) {
+  .nav {
+    padding: 30px;
+  }
+
+  .nav li {
+    font-size: 25px;
+    margin-right: 30px;
+  }
+}
+
+
