--- a/src/App.css
+++ b/src/App.css
@@ -59,10 +59,10 @@
 }
 
 .background {
-  overflow-y: auto; /* Set to 'auto' to enable scrolling when content overflows */
+  overflow-y: auto; 
   display: flex;
   width: 100%;
-  min-height: 100vh; /* Set a minimum height to prevent elements from overlapping */
+  min-height: 100vh;
   background-color: #3c1053;
   background-image: linear-gradient(43deg, #3c1053 30%, #ad5389 100%);
 }
@@ -74,6 +74,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  .background {
+    overflow-y: auto; 
   }
 
 }
