--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    position: fixed;
+    position: relative;
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
