--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -1,29 +1,35 @@
-.about-card {
-    width: 1000px;
-    height: 650px;
-    border-radius: 25px;
+.background {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    flex-direction: column;
+    min-height: 100vh;
+    padding-bottom: 100px; /* Add padding to the bottom to make space for the fixed footer */
+  }
+  
+  .about-card {
+    width: 100vw;
+    padding: 20px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    margin-top: 70px;
+    margin-bottom: 50px;
+  }
+  
+  .about-h1 {
     position: relative;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.about-h1 {
-    position: fixed;
     top: 30px;
     left: 65px;
     font-weight: bolder;
-}
-
-.about-text {
-        font-family: Arial, sans-serif;
-        font-size: 25px;
-        line-height: 1.5;
-        font-weight: bolder;
-        padding: 20px;
-        border-radius: 5px;
-}
+  }
+  
+  .about-text {
+    font-family: Arial, sans-serif;
+    font-size: 25px;
+    line-height: 1.5;
+    font-weight: bolder;
+    padding: 20px;
+    border-radius: 5px;
+  }
+  
+  .footer {
+    position: relative;
+    width: 100%;
+  }
