--- a/src/Components/Contact/contact.css
+++ b/src/Components/Contact/contact.css
@@ -1,10 +1,15 @@
+.background {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; 
+}
+
 .contact-cont {
-    display: flex;
+    display: relative;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 75vh;
-    min-height: 100%;
+    height: 100px;
   }
   
   .contact-h1 {
@@ -18,7 +23,10 @@
     font-family: Arial, sans-serif;
     font-size: 30px;
     text-align: center;
-    margin: 6rem;
+    margin: 0 auto;
+    margin-top: 25rem;
+    height: 544px;
+    max-width: 1400px;
   }
 
   .contact-text p.email {
@@ -33,7 +41,7 @@
 
   .notification {
     position: absolute;
-    bottom: 47%;
+    bottom: 10%;
     left: 50%;
     transform: translateX(-50%);
     padding: 10px 20px;
@@ -46,3 +54,4 @@
   .notification.hidden {
     opacity: 0;
   }
+
