--- a/src/Components/Nav/nav2.css
+++ b/src/Components/Nav/nav2.css
@@ -77,6 +77,8 @@
 
 @media (max-width: 1100px) {
   .nav2 {
+    top: 100px;
+    position: relative;
     flex-direction: column;
     align-items: flex-start;
     padding: 10px;
@@ -111,7 +113,7 @@
     margin: 10px 0;
     background-color: transparent;
     color: black;
-    font-size: 30px;
+    font-size: 50px;
     flex-direction: column;
   }
 
