--- a/src/Components/Projects/projects.css
+++ b/src/Components/Projects/projects.css
@@ -1,3 +1,9 @@
+.background {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; 
+}
+
 .project {
   display: flex;
   justify-content: center;
