--- a/src/Components/Certificates/certificates.css
+++ b/src/Components/Certificates/certificates.css
@@ -1,18 +1,42 @@
 .background {
   display: flex;
-  flex-direction: column;
+  flex-direction: column; 
   min-height: 100vh; 
 }
 
+.certificates-container{
+    display: relative;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.certificates-grid {
+  width: 300px;
+  height: 450px;
+  margin: 40px;
+  margin-bottom: 414px;
+  padding: 20px;
+  text-align: center;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  position: relative;
+  top: 300px;
+}
+
+.image {
+  position: relative;
+  right: 20px;
+}
+
 .certificate-card {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   cursor: pointer;
   transform-style: preserve-3d;
-  transition: transform 0.6s;
+  transition: transform 0.6s; 
+  justify-content: center;
+  align-items: flex-end; 
 }
 
 .certificate-card .card-inner {
@@ -29,27 +53,11 @@
   transform: rotateY(180deg);
 }
 
-.certificates-grid {
-  top: -100px;
-  width: 300px;
-  height: 450px;
-  margin: 40px;
-  padding: 20px;
-  text-align: center;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  position: relative;
-  perspective: 1000px;
-}
-
-
-
 .certificate-card.flipped .card-inner {
   transform: rotateY(180deg);
 }
 
 .certificate-card .card-inner {
-  position: relative;
   width: 100%;
   height: 100%;
   transform-style: preserve-3d;
@@ -58,7 +66,6 @@
 
 .certificate-card .front,
 .certificate-card .back {
-  position: absolute;
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
@@ -70,9 +77,10 @@
 
 .certificate-card .front {
   z-index: 2;
-  display: flex;
-  flex-direction: column;
+  position: absolute;
   justify-content: space-between; 
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .certificate-card .back {
