--- a/src/Components/Nav/nav2.css
+++ b/src/Components/Nav/nav2.css
@@ -11,6 +11,11 @@
   align-items: center;
 }
 
+.nav2.nav2-blur {
+  backdrop-filter: blur(10px);
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
 .nav2-menu-icon {
   color: black;
 }
