--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -1,23 +1,30 @@
 .background {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    padding-bottom: 100px; /* Add padding to the bottom to make space for the fixed footer */
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;  
   }
+
+  .about-container {
+    display: relative;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+    }
   
   .about-card {
-    width: 100vw;
+    max-width:1100px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
     padding: 20px;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-    margin-top: 70px;
-    margin-bottom: 50px;
-  }
+    text-align: center;
+    margin: auto;
+    margin-top: 250px;
+    margin-bottom: 163px;
+    }
   
   .about-h1 {
-    position: relative;
-    top: 30px;
-    left: 65px;
     font-weight: bolder;
+    text-align: left;
   }
   
   .about-text {
@@ -28,8 +35,4 @@
     padding: 20px;
     border-radius: 5px;
   }
-  
-  .footer {
-    position: relative;
-    width: 100%;
-  }
+
