--- a/src/Components/Projects/projects.css
+++ b/src/Components/Projects/projects.css
@@ -4,23 +4,43 @@
   min-height: 100vh; 
 }
 
-.project {
-  display: flex;
+.tech-container {
+  position: relative;
+  flex-direction: row;
   justify-content: center;
-  align-items: center; 
-  position: fixed;
-  top: 52%;
+  align-items: center;
+  flex-grow: 1;
+  margin-top: 230px; 
+  max-width: 500px;
+  right: 50vh;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translateX(-50%);
+}
+
+.clickable-list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); 
+  gap: 10px;
+  justify-items: center; 
+  align-items: center;
+}
+
+.project {
+  flex-direction: row;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 176px;
 }
 
 .project-card {
   width: 300px;
   height: 450px;
   margin: 40px;
+  margin-bottom: 0px;
   padding: 20px;
   text-align: center;
-  border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   display: flex; 
   flex-direction: column; 
@@ -74,18 +94,13 @@
   margin-bottom: 30px;
 }
 
-.clickable-list {
-  display: flex;
-  flex-wrap: wrap;
-}
-
 .clickable-list li {
   font-size: 20px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   list-style-type: none;
-  margin-left: 100px;
+  margin-left: 20px; 
   margin-top: 10px;
 }
 
@@ -98,6 +113,12 @@
 @media (min-width: 992px) {
   .clickable-list li {
     width: 20%; 
+  }
+}
+
+@media (max-width: 1100px) {
+  .tech-container {
+    margin-top: 350px; 
   }
 }
 
