--- a/src/Components/Certificates/certificates.css
+++ b/src/Components/Certificates/certificates.css
@@ -1,7 +1,8 @@
 .background {
   display: flex;
-  flex-direction: column; 
-  min-height: 100vh; 
+  flex-direction: column;
+  min-height: 100vh;
+  position: relative; /* Add this property */
 }
 
 .certificates-container{
