--- a/src/App.css
+++ b/src/App.css
@@ -58,10 +58,11 @@
   justify-content: center;
 }
 
+
 .background {
   display: flex;
   width: 100%;
   min-height: 100vh;
-  background-color: #3c1053;
-  background-image: linear-gradient(43deg, #3c1053 30%, #ad5389 100%);
+  background-color: #8e9eab;
+  background-image: linear-gradient(43deg, #8e9eab 30%, #eef2f3 100%);
 }
