--- a/src/Components/Certificates/certificates.css
+++ b/src/Components/Certificates/certificates.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  position: relative; /* Add this property */
+  position: relative;
 }
 
 .certificates-container{
