--- a/src/Pages/style.css
+++ b/src/Pages/style.css
@@ -3,11 +3,11 @@
   display: flex;
   width: 100%;
   height: 100vh;
-  background-color: #3c1053;
+  background-color: #8e9eab;
   background-image: linear-gradient(
     43deg,
-    #3c1053 30%,
-    #ad5389 100%
+    #8e9eab 30%,
+    #eef2f3 100%
   );
 }
 
